Updated and Segregated

--- a/LoginRegisterportal/Registration.html
+++ b/LoginRegisterportal/Registration.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    <script src="/modules/index.js"></script>
+    <link rel="stylesheet" href="/modules/stylesheet.css">
     <title>Guessiz Registration</title>
 </head>
 <body>
-    <div>
+    <div class="Want">
         <a href="Login.html">>>Want to Login </a>
     </div>
-<div>    
+<div class="LR">    
     <ul>
+        <img src="" alt="">
         <h3>Username</h3>
-        <input class="LR" type="text" >
+        <input type="text" >
         <h3>Email ID</h3>
-        <input class="LR" type="email" >
+        <input type="email" >
         <h3>Password</h3>
-        <input class="LR" type="password" >
+        <input type="password" >
         <h3>Confirm Password</h3>
-        <input class="LR" type="password" >
+        <input type="password" >
         <button onclick="alert('Account Created')">Confirm</button>
-        
     </ul>
 </div>    
 </body>
