--- a/LoginRegisterportal/Login.html
+++ b/LoginRegisterportal/Login.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    <script src="/modules/index.js"></script>
+    <link rel="stylesheet" href="/modules/stylesheet.css">
     <title>Guessiz Login</title>
 </head>
 <body>
-    <div>
+    <div class="Want">
         <a href="Registration.html">>>Want to Register </a>
     </div>
-<div>    
+<div class="LR">   
     <ul>
+        <img src="" alt="">
         <h3>Username/Email ID</h3>
-        <input class="LR" type="text" >
+        <input type="text" >
         <h3>Password</h3>
-        <input class="LR" type="password" >
+        <input type="password" >
         <button onclick="alert('Account Created')">Confirm</button>
-        
     </ul>
 </div>    
 </body>
