Edited Login Portal and Register Portal

--- a/LoginRegisterportal/Login.html
+++ b/LoginRegisterportal/Login.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/modules/index.js"></script>
-    <link rel="stylesheet" href="/modules/stylesheet.css">
+    <script src="portal.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Guessiz Login</title>
 </head>
 <body>
+    <form action="">
     <div class="Want">
-        <a href="Registration.html">>>Want to Register </a>
-    </div>
-<div class="LR">   
-    <ul>
         <img src="" alt="">
         <h3>Username/Email ID</h3>
-        <input type="text" >
-        <h3>Password</h3>
-        <input type="password" >
-        <button onclick="alert('Account Created')">Confirm</button>
-    </ul>
-</div>    
+        <div><input type="text" placeholder="Username/Email">
+        </div><h3>Password</h3>
+        <input type="password" placeholder="Password" >
+        <button type="submit" onclick="alert('Account Created')">Login</button>
+        <a class="LR" href="Registration.html">>>Want to Register </a>
+    </div>
+    </form>    
 </body>
 </html>
