--- a/LoginRegisterportal/Registration.html
+++ b/LoginRegisterportal/Registration.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/modules/index.js"></script>
-    <link rel="stylesheet" href="/modules/stylesheet.css">
+    <script src="portal.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Guessiz Registration</title>
 </head>
 <body>
     <div class="Want">
-        <a href="Login.html">>>Want to Login </a>
-    </div>
-<div class="LR">    
-    <ul>
         <img src="" alt="">
         <h3>Username</h3>
-        <input type="text" >
+        <input type="text" placeholder="Username" >
         <h3>Email ID</h3>
-        <input type="email" >
+        <input type="email" placeholder="example@abc.com" >
         <h3>Password</h3>
-        <input type="password" >
+        <input type="password" placeholder="Password" >
         <h3>Confirm Password</h3>
-        <input type="password" >
+        <input type="password" placeholder="Confirm Password" >
         <button onclick="alert('Account Created')">Confirm</button>
-    </ul>
-</div>    
+        <a href="Login.html">>>Want to Login </a>
+    </div>    
 </body>
 </html>
