--- a/LoginRegisterportal/Login.html
+++ b/LoginRegisterportal/Login.html
@@ -10,7 +10,7 @@
 <body>
     <form action="">
     <div class="Want">
-        <img src="" alt="">
+        <img src="/modules/Images/Logo.jpg" alt="">
         <h3>Username/Email ID</h3>
         <div><input type="text" placeholder="Username/Email">
         </div><h3>Password</h3>
