--- a/LoginRegisterportal/Registration.html
+++ b/LoginRegisterportal/Registration.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="Want">
-        <img src="" alt="">
+        <img src="/modules/Images/Logo.jpg" alt="Logo">
         <h3>Username</h3>
         <input type="text" placeholder="Username" >
         <h3>Email ID</h3>
